# SmartInfo

./: .cursorignore  .gitignore  README.md  README_CN.md  analysis_result.txt  parser_code.py  profiling_script.py  requirements.txt  run.py  smart_info_requirement_v1.0.0_2025-3-26.md
backend/: README.md  __init__.py  analysis_prompt.txt  celery_app.py  celery_worker.py  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  dependencies.py
backend/api/dependencies/: __init__.py  dependencies.py
backend/api/routers/: __init__.py  auth.py  chat.py  news.py  news_router.py  qa_router.py  settings.py  settings_router.py  tasks.py
backend/api/schemas/: __init__.py  news.py  qa.py  settings.py
backend/api/websockets/: __init__.py  connection_manager.py  news_ws.py  qa_ws.py
backend/background/: celery_app.py  celery_worker.py
backend/background/tasks/: __init__.py  news_tasks.py  step_codes.py
backend/core/: __init__.py  crawler.py  security.py  ws_manager.py
backend/core/llm/: __init__.py  client.py  pool.py
backend/core/workflow/: news_fetch.py
backend/db/: __init__.py  connection.py  schema_constants.py
backend/db/repositories/: __init__.py  api_key_repository.py  base_repository.py  chat_repository.py  fetch_history_repository.py  message_repository.py  news_category_repository.py  news_repository.py  news_source_repository.py  qa_repository.py  system_config_repository.py  user_preference_repository.py  user_repository.py
backend/models/: __init__.py
backend/models/schemas/: __init__.py  api_key.py  chat.py  news.py  settings.py  user.py
backend/services/: __init__.py  auth_service.py  chat_service.py  llm_client.py  news_service.py  qa_service.py  setting_service.py
backend/tasks/: news_tasks.py
backend/utils/: html_utils.py  markdown_utils.py  prompt.py  text_utils.py  token_utils.py
crawl_output_playwright_html/: hub.baai.ac.cn_.html  pro.jiqizhixin.com_reference_ff25ec2f-ffcf-4d75-9503-46ab55afc999.html  www.jiqizhixin.com.html  www.xinhuanet.com.html
(+154 files in other folders)
