[project]
name = "smartinfo-backend"
version = "0.1.0"
description = "Backend for SMARTINFO project"
authors = [
    {name = "cator",email = "cator6005@gamil.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "ijson (>=3.3.0,<4.0.0)",
    "deepseek-tokenizer (>=0.1.3,<0.2.0)",
    "volcengine-python-sdk (>=2.0.1,<3.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "openai (>=1.76.2,<2.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.4.0,<6.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "celery[redis] (>=5.5.2,<6.0.0)",
    "trafilatura (>=2.0.0,<3.0.0) ; python_version >= \"3.12\" and python_version < \"4\""
]

# Add this section to explicitly define package locations
[tool.poetry]
packages = [
    { include = "api" },
    { include = "core" },
    { include = "db" },
    { include = "models" },
    { include = "services" },
    { include = "tasks" },
    { include = "utils" },
    # Include top-level .py files if they are part of the intended package
    { include = "celery_app.py" },
    { include = "celery_worker.py" },
    { include = "config.py" },
    { include = "main.py" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
